fix skeleton size, redesign scrollbar

--- a/src/entities/Article/ui/ArticleListItem/ArticleListItem.module.scss
+++ b/src/entities/Article/ui/ArticleListItem/ArticleListItem.module.scss
@@ -101,3 +101,16 @@
     white-space: nowrap;
   }
 }
+
+.ArticleListItemRedesigned {
+  &.BIG {
+    width: 100%;
+  }
+
+  &.SMALL {
+    .card {
+      width: 240px;
+      height: 350px;
+    }
+  }
+}
